MySFDCProject/src/objects/Sample__c.object
<CustomObject>
    <fields>
        <fullName>Pharma_Product__c</fullName>
        <label>Pharma Product</label>
        <referenceTo>Pharma_Products__c</referenceTo>
        <relationshipLabel>Samples</relationshipLabel>
        <relationshipName>Samples</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Samples</relationshipLabel>
        <relationshipName>Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sample</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Sample Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Quantity_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity can not be negative. Please enter a positive value.</errorMessage>
    </validationRules>
</CustomObject>